--- a/index.html
+++ b/index.html
@@ -4,53 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>撸大神</title>
-    <script type="text/javascript">
-		var wx= (function(){
-        	return navigator.userAgent.toLowerCase().indexOf('micromessenger') !== -1
-        })();
-        
-        if(wx){
-        	if (typeof WeixinJSBridge == undefined) {
-        		if (document["addEventListener"]) {
-        			document["addEventListener"]("WeixinJSBridgeReady", "onBridgeReady", false)
-        		} else {
-        			if (document["attachEvent"]) {
-        				document["attachEvent"]("WeixinJSBridgeReady", "onBridgeReady");
-        				document["attachEvent"]("onWeixinJSBridgeReady", "onBridgeReady")
-        			}
-        		}
-        	} else {
-        		onBridgeReady()
-        	};
-        }else {
-        	// alert("不是微信");
-        }
-        
-        function onBridgeReady() {
-            var _timer = 0;
-            setInterval(function() {
-                _timer += 1;
-                if (_timer % 2 == 0) {
-                    WeixinJSBridge["call"]("hideOptionMenu")
-                } else {
-                    WeixinJSBridge["call"]("showOptionMenu")
-                }
-            }, 300)
-        }
-        function onWeixinBridgeReady() {
-            WeixinJSBridge.call('hideOptionMenu');
-        }
-
-            if (typeof WeixinJSBridge === 'undefined') {
-                if (document.addEventListener) {
-                    document.addEventListener('WeixinJSBridgeReady', onWeixinBridgeReady, false);
-                } else if (document.attachEvent) {
-                    document.attachEvent('WeixinJSBridgeReady', onWeixinBridgeReady); 
-                    document.attachEvent('onWeixinJSBridgeReady', onWeixinBridgeReady);
-                }
-                    } else {
-                    onWeixinBridgeReady();
-                }
+    <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
+        wx.ready(function() {
+            wx.hideMenuItems({
+                menuList: ["menuItem:copyUrl","menuItem:editTag","menuItem:delete","menuItem:originPage","menuItem:readMode", "menuItem:openWithQQBrowser", "menuItem:openWithSafari","menuItem:share:email","menuItem:share:brand","menuItem:share:qq","menuItem:share:QZone"] // 要隐藏的菜单项，只能隐藏“传播类”和“保护类”按钮
+            });
+          });
 	</script>
   </head>
   <body>
